--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ body{margin:0 auto; padding: 0 auto;}
 .search {
     float: left;
     width: 30%;
+    display: flex;
+    flex-direction: row;
     text-align: center;
     margin: 1.5em 0em;
 }
@@ -32,6 +34,7 @@ input {
     font-weight: 400;
 }
 .search button {
+    cursor: pointer;
     border: 1px solid transparent;
     background: white;
     height: 2.4em;
